# osito

./: .gitignore  README.md  download_models.py  osito.py  pyproject.toml  run.sh  setup.sh
