[project]
name = "osito"
version = "0.1.0"
description = "Local Spanish learning voice assistant for children"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20250625",
    "piper-tts>=1.3.0",
    "pyaudio>=0.2.14",
    "numpy<2.4",
    "huggingface-hub>=1.3.2",
    "ollama>=0.4.0",
]

[project.scripts]
osito = "osito:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
